main.css
/* ... */
.review-parent-div{
    display: flex;
    border: 1px;
    border-style: solid;
    height: 150px;
    padding: 1vw;
    margin-top: 2vw;
    width: 970px;
}

.review-image-div
{
    display: flex;
    flex-direction: column;
    
}

.reviewProfilePic{
    border-radius: 50%;
    width: 118px;
    height: 118px;
    border: none;
    justify-content: center;
    align-items: center;
    padding: 1vw;
    padding-bottom: 0px;
}

.review-profile-pic-name
{
    position: relative;
    text-align: center;
}



.reveiw-text-area{
    border: 1px solid black;
}

.messages-div{
    padding-top: 5%;
    display: flex;
    text-align: center;
    flex-wrap: wrap;
    background: rgba(255,255,255,50%);
    border-radius: 10px;
}

.users {
    width: 300px;
    flex-grow: 1;
}

.message-history{
    flex-grow: 3;
    
    display: flex;
    flex-direction: column;
}

.users-label{
    margin: auto;
    
    width: 200px;
    border-radius: 8px;
    border: solid #000;
    border-width: 1px;
    background-color: #c83349;
    color: white;
}

.message-history-label{
    margin: auto;
    
    border-radius: 8px;
    border: solid #000;
    border-width: 1px;
    background-color: #c83349;
    color: white;
    
    width: 300px;
}

.users-messages-divider{
    border: 0px;
    border-left: 1px; 
    border-style: solid;
    border-color: black;
    
    padding-left: 1%;
}

.users-placeholder{
    display: flex;
    flex-direction: column;
    word-break: break-all;
}

.match-button{
    width: auto;
    height: 50px;
    
    text-align: center;
    margin: auto;
    
    border-radius: 50%;
    object-fit: cover;
    object-position: 20% 10%;
    
    background-color: #c83349;
    color: white;
    outline: none;
    box-shadow: none;
    cursor: pointer;
}

.matched-button{
    width: auto;
    height: 50px;
    
    text-align: center;
    margin: auto;
    
    border-radius: 50%;
    object-fit: cover;
    object-position: 20% 10%;
    
    background-color: limegreen;
    color: white;
}

.matching-button{
    width: auto;
    height: 50px;
    
    text-align: center;
    margin: auto;
    
    border-radius: 50%;
    object-fit: cover;
    object-position: 20% 10%;
    
    background-color: darkslategrey;
    color: white;
}

hr {
    border: 0px;
    border-bottom: 1px;
    border-style: solid;
    border-color: black;
    
    width: 100%;
}

/**************************************************************
    View Others Profile***************************************/

.reviews-label-div-readonly{
    display: flex;
    height: 50px;
    justify-content: center;
    padding-top: 1vw;
    width: 1040px;
}

.add-review-button-class, #report-account-button{
    background-color: #4CAF50;
    border: none;
    border-radius: 8px;
    color: white;
    cursor: pointer;
    font-size: 20px;
    padding: 10px 20px;
    width: 225px;
    text-align: center;
}

.report-account-button-div{
    display: flex;
    justify-content: center;
}

#report-account-button{
    margin-top: 1em;
}

.profile-review-name-label-class{
    font-size: 13px;
    font-weight: bold;
    padding: 0.3em;
    text-align: center;
}

.review-image-div{
    display: flex;
    flex-direction: column;
    justify-content: center;
}

/**************************************************************
    Search Recommended ***************************************/

.serach-div{
    max-height: 100%;
}

.search-recommended-main-div{
    display: flex;
    justify-content: center; 
    
    max-height: 100%;
}
.search-sub-div{
    margin-top: 5em;
}

#search-text{
    width: 300px;
    height: 2.2em;
    border-radius: 8px;
    border-width: thin;
    padding-top: 0.2em;
    padding-bottom: 0.2em;
    padding-left: 0.5em;
    padding-right: 0.5em;
}

#search-button{
    height: 2.6em;
    background-color: #4CAF50;
    border: none;
    border-radius: 8px;
    color: white;
    cursor: pointer;
    padding: 10px 20px;
    text-align: center;
}

#recommended-button{
    height: 2.6em;
    margin-right: 8vw;
    background-color: #4CAF50;
    border: none;
    border-radius: 8px;
    color: white;
    cursor: pointer;
    padding: 10px 20px;
    text-align: center;
    margin-top: 4.3em;
}

.search-result-recommended-parent-div{
    display: flex;
    margin: 2em;
    padding: 2em;
    justify-content: center;
    background: rgba(255,255,255, 50%);
    border-radius: 10px;
}

.review-stars-flex-div
{
    display: flex;
    justify-content: space-evenly;
}

img {
    max-width: 100%;
    height: auto;
}

.review-stars-div{
    width: 50px;
    height: 50px;
}



.review-rating-id{
    margin: 1em;
}

.seach-profile-button-div {
    display: flex;
    flex-direction: row;
    padding-left: 4em;
}

.search-profile-view-button, .search-profile-message-button{
    margin: 0.5em;
    height: 2.6em;
    background-color: #4CAF50;
    border: none;
    border-radius: 8px;
    color: white;
    cursor: pointer;
    padding: 10px 20px;
    text-align: center;
    margin-top: 20%;
    width: 100px;
}

.profile-username{
    text-align: center;
    font-size: 17px;
    padding: 0;
}

.search-profile-aboutme-text-area{
    margin-top: 1em;
    margin-bottom: 0.8em;
}

/**************************************************************
    Admin page ***************************************/

.admin-reported-header{
    align-content: center;
    text-align: center;
    font-size: 60px;
    background-color: rgba(255,255,255,50%);
    padding: 0.3em;
}

.admin-reported-account-main-div{
    display: flex;
    justify-content:space-around;
    flex-direction: row;
    background-color: rgba(255,255,255,50%);
    font-size: 20px;
    border: 2px;
    border-style: solid;
    font-weight: bold;
    padding-top: 20px;
    padding-bottom: 20px;
}

#admin-date-reported-text{
    padding-right: 108px;
}

.admin-profile-pic-div{
    padding-left: 20px;   
}

.admin-buttons-div{
    display: flex;
    justify-content: space-around;
}
/* ... */

